--- a/style.css
+++ b/style.css
@@ -71,14 +71,20 @@ h6 {
 
 /* CSS */
 
+body {
+	background-color: #1F1F1F;
+}
+
 .container {
 	display: flex;
+	width: 70%;
+	margin: 0 auto;
 }
 
 .form-content {
 	background-color: #F9FAFB;
 	flex: 1;
-	padding: 50px 200px;
+	padding: 100px 50px;
 }
 
 .form-img img {
@@ -86,6 +92,6 @@ h6 {
 }
 
 .form-img {
-	width: 30%;
-	flex: 0 1 auto;
+	width: 450px;
+	flex: 0 0 auto;
 }
