--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ h6 {
 
 /* CSS */
 
+* {
+	font-family: Helvetica;
+}
+
 body {
 	background-color: #1F1F1F;
 }
@@ -94,4 +98,8 @@ body {
 .form-img {
 	width: 450px;
 	flex: 0 0 auto;
+}
+
+.form {
+	background-color: pink;
 }
