Add password constraint.
I have not added the code to compare whether both
the passwords are same, nor I have added the code
that shows the expected format of the user input
below it.

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ input:focus {
 	background-color: rgba(185, 35, 38, 0.25);
 }
 
-.form-col>input:valid {
+.form-col>input:user-valid {
 	border: 1px solid #8BC34A;
 	background-color: rgba(139, 195, 74, 0.25);
 }
